--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spaghet_kotd_app",
-  "version": "0.2.7",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -33,6 +33,7 @@
     "react-moment": "^1.1.3",
     "react-swipeable-views": "^0.14.0",
     "react-timer-hook": "^3.0.7",
+    "react-use-websocket": "^4.9.0",
     "react-uuid": "^2.0.0",
     "serve": "^14.2.3",
     "stream": "npm:stream-browserify",
